--- a/README.adoc
+++ b/README.adoc
@@ -15,7 +15,7 @@ ifndef::env-github[:toc: left]
 :includedir: docs
 
 = INTERLIS 2.4 Referenzhandbuch
-Stefan Henrich <stefan.henrich@moflex.ch>
+Amanda Wetter <amanda.wetter@sz.ch>
 // Versionierung
 :revdate: {docdate}
 :revnumber: 0.1.3
