--- a/docs/testdoc.adoc
+++ b/docs/testdoc.adoc
@@ -4,5 +4,5 @@ Das vorliegende Dokument ist eine Kopie des Standards https://ech.ch/de/ech/ech-
 [NOTE]
 Als Ergänzung zu den Ankern vor den Kapiteln und Unterkapiteln wurden, wo sinnvoll, zusätzliche Anker bei den Codeblöcken (EBNF) eingearbeitet. Diese sind durch das Zeichen &#8251; gekennzeichnet. Damit lässt sich direkt auf einen Codeblock innerhalb eines Kapitels verweisen.
 
-Fehler oder Abweichungen zum Standarddokument von eCH können im zugrunde liegenden https://github.com/geostandards-ch/doc_refhb24[Github Repository] als Issue erfasst werden. Für inhaltliche Änderungen muss bei der eCH Fachgruppe Geoinformation ein https://ech.ch/de/ech-standards/standardisierungsprozess/request-change-rfc?ech_nummer=eCH-0031&version=2.0[Request for Change (RFC)] eingereicht werden.
+Fehler oder Abweichungen zum Standarddokument von eCH können im zugrunde liegenden https://ch-sz-geo.github.io/A000/[Github Repository] als Issue erfasst werden. Für inhaltliche Änderungen muss bei der eCH Fachgruppe Geoinformation ein https://ech.ch/de/ech-standards/standardisierungsprozess/request-change-rfc?ech_nummer=eCH-0031&version=2.0[Request for Change (RFC)] eingereicht werden.
 ****
