--- a/README.adoc
+++ b/README.adoc
@@ -26,7 +26,7 @@ Amanda Wetter <amanda.wetter@sz.ch>
 // Die Verwiese auf die Inhalte der Dokumentation sollen im README auf Github nicht angezeigt werden.
 ifndef::env-github[]
 include::{includedir}/testdoc.adoc[]
-include::{includedir}/testdoc.adoc[]
+include::{includedir}/testdoc2.adoc[]
 endif::[]
 
 // Erklärung und Link auf Website
