--- a/README.adoc
+++ b/README.adoc
@@ -14,7 +14,7 @@ ifndef::env-github[:toc: left]
 :sectanchors:
 :includedir: docs
 
-= INTERLIS 2.4 Referenzhandbuch
+= Dokumentation
 Amanda Wetter <amanda.wetter@sz.ch>
 // Versionierung
 :revdate: {docdate}
@@ -31,7 +31,7 @@ endif::[]
 
 // Erklärung und Link auf Website
 ifdef::env-github[]
-In diesem Repository wird die Online-Version des INTERLIS 2.4 Referenzhandbuches gepflegt. Die Quelldateien der einzelnen Haupt- und Unterkapitel befinden sich im Verzeichnis `docs`. Ergänzungen und Korrekturen bitte als Issue oder allenfalls PR erfassen.
+In diesem Repository ist der Versuch gestartet worden, eine Page aus den Files zu generieren.
 
-Die aktuelle Website ist unter https://geostandards-ch.github.io/doc_refhb24/ erreichbar.
+Die aktuelle Website ist unter https://ch-sz-geo.github.io/A000/ erreichbar.
 endif::[]
