--- a/docs/testdoc2.adoc
+++ b/docs/testdoc2.adoc
@@ -25,3 +25,5 @@ Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod 
 
 Hier noch ein File zum Downloaden  link:++https://github.com/ch-sz-geo/A000/blob/main/data/Testdoc%20Blibla%20blo.pdf++[Dokument]
 
+Hier noch ein File zum Downloaden  link:++..\data\Testdoc Blibla blo.pdf++[Dokument]
+
