--- a/README.adoc
+++ b/README.adoc
@@ -19,8 +19,8 @@ ifndef::env-github[]
 include::{includedir}/headerSZ.adoc[]
 endif::[]
 
-= Main Title: Sondernutzungsplanung
-= Main Title: Main Title Continued: kommunal V1
+[separator=::]
+= Main Title:: Sondernutzungsplanung kommunal V1
 Amanda Wetter <amanda.wetter@sz.ch>
 // Versionierung
 :revdate: {docdate}
