--- a/README.adoc
+++ b/README.adoc
@@ -30,7 +30,7 @@ Amanda Wetter <amanda.wetter@sz.ch>
 
 // Die Verwiese auf die Inhalte der Dokumentation sollen im README auf Github nicht angezeigt werden.
 ifndef::env-github[]
-include::{includedir}/testdoc.adoc[]
+include::{includedir}/impressum.adoc[]
 include::{includedir}/testdoc2.adoc[]
 include::{includedir}/testdoc3.adoc[]
 endif::[]
