--- a/docs/impressum.adoc
+++ b/docs/impressum.adoc
@@ -1,5 +1,6 @@
 === Impressum
 
+[grid=none]
 [width="autowidth"]
 |=======
 |Erstelldatum |  24.01.2024
@@ -15,6 +16,7 @@ gültig
 |=======
 
 ==== Historie
+[grid=none]
 [width="autowidth"]
 |=======
 | *Version* | *Datum* | *Autor* | *Bemerkung*
@@ -23,6 +25,7 @@ gültig
 |=======
 
 ==== Koreferat
+[grid=none]
 [width="autowidth"]
 |=======
 | *Version* | *Datum* | *Koreferent* | *Prüfstelle*
@@ -30,6 +33,7 @@ gültig
 |=======
 
 ==== Referenzierte Dokumente
+[grid=none]
 [width="autowidth"]
 |=======
 | *Nr.* | *Titel* | *Autor(en)* | *Version*
