--- a/README.adoc
+++ b/README.adoc
@@ -1,6 +1,6 @@
 // Todo Header Styling und Environment ändern auf Doc. Header auf der Webseite muss auf andere Weise integriert werden
 ifndef::env-github[]
-include::{includedir}/headerSZ.adoc[]
+include::docs/headerSZ.adoc[]
 endif::[]
 
 = Sondernutzungsplanung kommunal V1
