--- a/README.adoc
+++ b/README.adoc
@@ -28,6 +28,9 @@ Amanda Wetter <amanda.wetter@sz.ch>
 // Pdf output
 :title-page:
 :chapter-label: // deprecated
+[#subtitle-header]*
+A202 +
+Modelldokumentation*
 
 // Die Verwiese auf die Inhalte der Dokumentation sollen im README auf Github nicht angezeigt werden.
 ifndef::env-github[]
