--- a/README.adoc
+++ b/README.adoc
@@ -28,8 +28,9 @@ Amanda Wetter <amanda.wetter@sz.ch>
 // Pdf output
 :title-page:
 :chapter-label: // deprecated
-[#subtitle-header]*
+[#subtitle-header]
 A202 +
+[#subtitle-header]
 Modelldokumentation*
 
 // Die Verwiese auf die Inhalte der Dokumentation sollen im README auf Github nicht angezeigt werden.
