--- a/docs/headerSZ.adoc
+++ b/docs/headerSZ.adoc
@@ -1,9 +1,9 @@
 [grid=none, frame=none]
 [width="100%"]
 |=======
-|Umweltdepartement | .4+<.>m|image:{includedir}/img/logo_kt_sz.JPG[]
-| [#amt-title]*Amt für Geoinformation* | Bahnhofstrasse 16 | 
-| | Postfach 1213 |
-| | 6431 Schwyz | 
-| | Telefon 041 819 25 41 |
+|Umweltdepartement | .5+<.>m|image:{includedir}/img/logo_kt_sz.JPG[]
+| [#amt-title]*Amt für Geoinformation* | Bahnhofstrasse 16 
+| | Postfach 1213
+| | 6431 Schwyz 
+| | Telefon 041 819 25 41
 |=======
