--- a/docs/headerSZ.adoc
+++ b/docs/headerSZ.adoc
@@ -1,5 +1,4 @@
-[grid=none, frame=none]
-[width="100%"]
+[grid=none, frame=none, width="100%", #header-table]
 |=======
 |Umweltdepartement | .5+<.>m|image:{includedir}/img/logo_kt_sz.JPG[]
 | [#amt-title]*Amt für Geoinformation* | Bahnhofstrasse 16 
@@ -7,3 +6,4 @@
 | | 6431 Schwyz 
 | | Telefon 041 819 25 41
 |=======
+*
