--- a/docs/headerSZ.adoc
+++ b/docs/headerSZ.adoc
@@ -1,4 +1,5 @@
-[grid=none, frame=none, width="100%", #header-table]
+[grid=none, frame=none, width="100%"]
+[#header-table]*
 |=======
 |Umweltdepartement | .5+<.>m|image:{includedir}/img/logo_kt_sz.JPG[]
 | [#amt-title]*Amt für Geoinformation* | Bahnhofstrasse 16 
