--- a/docs/headerSZ.adoc
+++ b/docs/headerSZ.adoc
@@ -1,5 +1,5 @@
+[.header-table]
 [grid=none, frame=none, width="100%"]
-[#header-table]*
 |=======
 |Umweltdepartement | .5+<.>m|image:{includedir}/img/logo_kt_sz.JPG[]
 | [#amt-title]*Amt für Geoinformation* | Bahnhofstrasse 16 
@@ -7,4 +7,3 @@
 | | 6431 Schwyz 
 | | Telefon 041 819 25 41
 |=======
-*
