--- a/docs/headerSZ.adoc
+++ b/docs/headerSZ.adoc
@@ -1,4 +1,4 @@
-[.header-table]
+[.header-table-sz]
 [grid=none, frame=none, width="100%"]
 |=======
 |Umweltdepartement | .5+<.>m|image:{includedir}/img/logo_kt_sz.JPG[]
