--- a/README.adoc
+++ b/README.adoc
@@ -45,4 +45,6 @@ ifdef::env-github[]
 In diesem Repository ist der Versuch gestartet worden, eine Page aus den Files zu generieren.
 
 Die aktuelle Website ist unter https://ch-sz-geo.github.io/A000/ erreichbar.
+
+Hier erhalte ich das Pdf https://raw.githubusercontent.com/ch-sz-geo.github.io/A000/gh-pages/ebook.pdf
 endif::[]
