--- a/docs/impressum.adoc
+++ b/docs/impressum.adoc
@@ -1,8 +1,7 @@
 
 https://ch-sz-geo.github.io/A000/data/TestdocBliblablo.pdf[Hier gehts zum Pdf, window=_blank] +
-https://ch-sz-geo.github.io/A000/data/testIli.ili[Hier gehts zum Hier habe ich eine .ili-Datei, window=_blank +
+https://ch-sz-geo.github.io/A000/data/testIli.ili[Hier gehts zum Hier habe ich eine .ili-Datei, window=_blank] +
 https://ch-sz-geo.github.io/A000/ebook.pdf[Hier gehts zum in einem anderen Branch, window=_blank] +
-
 
 [discrete]
 === Impressum
