--- a/README.adoc
+++ b/README.adoc
@@ -13,13 +13,9 @@ ifndef::env-github[:toc: left]
 :sectlinks:
 :sectanchors:
 :includedir: docs
-// :stylesheet: stylesheet.css
+:stylesheet: stylesheet.css
 
 // Todo Header Styling und Environment ändern auf Doc. Header auf der Webseite muss auf andere Weise integriert werden
-
-ifdef::backend-docbook5[]
-include::{includedir}/headerSZ.adoc[]
-endif::[]
 
 = Sondernutzungsplanung kommunal V1
 Amanda Wetter <amanda.wetter@sz.ch>
@@ -29,8 +25,13 @@ Amanda Wetter <amanda.wetter@sz.ch>
 // Pdf output
 :title-page:
 
+[.untertitel]
 A202 +
 Modelldokumentation
+
+ifdef::backend-docbook5[]
+include::{includedir}/headerSZ.adoc[]
+endif::[]
 
 // Die Verwiese auf die Inhalte der Dokumentation sollen im README auf Github nicht angezeigt werden.
 ifndef::env-github[]
