--- a/docs/allgemeines.adoc
+++ b/docs/allgemeines.adoc
@@ -31,3 +31,5 @@ Diese Dokumentation richtet sich an Behörden und Fachleute des Kantons und der 
 an private Planungsbüros und GIS-Dienstleister, welche sich mit der Bearbeitung von Geobasisdaten
 zu Gestaltungsplänen befassen. +
 
+ifdev:
+<<<
