--- a/docs/allgemeines.adoc
+++ b/docs/allgemeines.adoc
@@ -31,5 +31,6 @@ Diese Dokumentation richtet sich an Behörden und Fachleute des Kantons und der 
 an private Planungsbüros und GIS-Dienstleister, welche sich mit der Bearbeitung von Geobasisdaten
 zu Gestaltungsplänen befassen. +
 
-ifdev:
+ifdef::docbook5[]
 <<<
+endif::[]
