--- a/docs/modellbeschreibung.adoc
+++ b/docs/modellbeschreibung.adoc
@@ -15,7 +15,17 @@ dazugehörigen Dokumente (Plan und Sonderbauvorschriften) im PDF-Format über ei
 Dokumentlink mit der entsprechenden Geometrie verknüpft.
 
 === Zonentypen
-[blue]*Todo Tabelle* +
+[cols="1,1,3,5"]
+|=======
+|Code |  Abkürzung | Bezeichnung | Beschreibung
+3+| *6 andere flächenbezogene Festlegungen* |
+| 61 | | Bereiche rechtsgültiger Sondernutzungspläne | Bereiche rechtsgültiger Sondernutzungspläne umfassen Gebiete mit Sonderbauvorschriften. Sie ergänzen, überlagern oder verändern Festlegungen des Rahmennutzungsplanes.
+| 61.1 | rGP | _Bereich rechtsgültiger Gestaltungsplan_ + 
+[small]_Hinweis: +
+Die Bezeichnung wird im konkreten Fall auf den Namen des Gestaltungsplans gesetzt._ | Diese Bereiche umfassen Gebiete mit Sonderbauvorschriften. Sie ergänzen, überlagern oder verändern Festlegungen des Zonenplans.
+| 61.9 | wrSP | Bereich weiterer rechtsgültiger Sondernutzungsplan | Diese Bereiche umfassen weitere Gebiete mit Sonderbauvorschriften. Sie ergänzen, überlagern oder verändern Festlegungen des Zonenplans, sind aber nicht als Bereich rechtsgültiger Gestaltungsplan zu betrachten.
+|=======
+
 
 *Ergänzende Information zur Definition des Zonentyps "Bereich rechtsgültiger Gestaltungsplan"* +
 
@@ -29,4 +39,16 @@ Die Abkürzung ist stets "rGP". Die Bezeichnung soll anstelle von "Bereich recht
 Gestaltungsplan" den Namen des Gestaltungsplans enthalten, vgl. Beispiele in nachfolgender Liste. +
 
 Beispiele für die Definition von Bereichen rechtsgültiger Gestaltungspläne:
-[blue]*Todo Tabelle* +
+
+[cols="1,1,3"]
+|=======
+h| Code h| Abkürzung h| Bezeichnung
+| 61.1.1 | rGP | Gestaltungsplan "Dörfli"
+| 61.1.2 | rGP | Gestaltungsplan "Freihof"
+| ... | ... | ...
+| 61.1.11 | rGP | Gestaltungsplan "Freihof West"
+|=======
+
+ifdef::backend-pdf[]
+<<<
+endif::[]
