--- a/docs/impressum.adoc
+++ b/docs/impressum.adoc
@@ -3,18 +3,16 @@ https://ch-sz-geo.github.io/A000/data/TestdocBliblablo.pdf[Hier gehts zum Pdf ab
 https://ch-sz-geo.github.io/A000/data/testIli.ili[Hier gehts zum Hier habe ich eine .ili-Datei, window=_blank] +
 https://ch-sz-geo.github.io/A000/ebook.pdf[Hier gehts zum in einem anderen pdf-generierten File, window=_blank] +
 
-
-
 [discrete]
 === Impressum
 
 [cols="1, 3"]
 |=======
-|Erstelldatum |  24.01.2024
+h|Erstelldatum h| 24.01.2024
 |Letzte Änderung | 24.01.2024
 | Seitenzahl gesamt inkl. Deckblatt und Inhaltsverzeichnis | x
 | ID nach kGeoiV | --- 
-| Themen-Nummer | A202
+h| Themen-Nummer h| A202
 | Beteiligte | Kuno Epper (kep), AGI + 
 Laura Lacher (LL), ARE
 | Status a| - [ ] Entwurf 
@@ -26,7 +24,7 @@ Laura Lacher (LL), ARE
 ==== Historie
 [cols="10%, 10%, 10%, 70%"]
 |=======
-| *Version* | *Datum* | *Autor* | *Bemerkung*
+h| Version h| Datum h| Autor h| Bemerkung
 | 1.0 | 23.08.2023 | kep | erster Entwurf und Veröffentlichung
 | 1.1 | 28.08.2023 | kep | Abschluss und Veröffentlichung
 |=======
@@ -35,7 +33,7 @@ Laura Lacher (LL), ARE
 ==== Koreferat
 [cols="10%, 10%, 10%, 70%"]
 |=======
-| *Version* | *Datum* | *Koreferent* | *Prüfstelle*
+h| Version h| Datum h| Koreferent h| Prüfstelle
 | 1.0 | 23.08.2023 | LL | ARE
 |=======
 
@@ -43,7 +41,7 @@ Laura Lacher (LL), ARE
 ==== Referenzierte Dokumente
 [cols="10%, 70%, 10%, 10%"]
 |=======
-| *Nr.* | *Titel* | *Autor(en)* | *Version*
+h| Nr. h| Titel h| Autor(en) h| Version
 | [01] | Kantonales Geoinformationsgesetz (KGeoiG) (SRSZ 214.110) | Kt. SZ | 24.06.2010
 | [02] | Verordnung zum kantonalen Geoinformationsgesetz (KGeoiV) (SRSZ 214.111) | Kt. SZ | 18.12.2012
 | [03] | Minimale Geodatenmodelle Bereich Nutzungsplanung; Modelldokumentation | ARE | 1.2, 22.09.2021
