--- a/docs/impressum.adoc
+++ b/docs/impressum.adoc
@@ -12,7 +12,7 @@ h|Erstelldatum h| 24.01.2024
 |Letzte Änderung | 24.01.2024
 | Seitenzahl gesamt inkl. Deckblatt und Inhaltsverzeichnis | x
 | ID nach kGeoiV | --- 
-h| Themen-Nummer h| A202
+| Themen-Nummer | A202
 | Beteiligte | Kuno Epper (kep), AGI + 
 Laura Lacher (LL), ARE
 | Status a| - [ ] Entwurf 
