--- a/docs/diagramme.adoc
+++ b/docs/diagramme.adoc
@@ -1,9 +1,9 @@
 == Diagramme
 === Komponentendiagramm
-image::{includedir}/img/Komponentendiagramm.jpg[]
+image::{includedir}/img/Komponentendiagramm.JPG[]
 
 === Klassendiagramm
-image::{includedir}/img/Klassendiagramm.jpg[]
+image::{includedir}/img/Klassendiagramm.JPG[]
 
 ifdef::backend-pdf[]
 <<<
