--- a/README.adoc
+++ b/README.adoc
@@ -15,6 +15,8 @@ ifndef::env-github[:toc: left]
 :includedir: docs
 :stylesheet: themes/stylesheet.css
 :pdf-theme: themes/pdf-theme.yml
+:doc-type: book
+:preface-title: Preface
 
 // Todo Header Styling und Environment ändern auf Doc. Header auf der Webseite muss auf andere Weise integriert werden
 ifdef::backend-pdf[]
@@ -29,6 +31,7 @@ Amanda Wetter <amanda.wetter@sz.ch>
 // Pdf output
 :title-page:
 
+== Preface
 [.untertitel]*A202* + 
 [.untertitel]*Modelldokumentation* 
 
