--- a/README.adoc
+++ b/README.adoc
@@ -15,8 +15,9 @@ ifndef::env-github[:toc: left]
 :sectanchors:
 :includedir: docs
 :stylesheet: themes/stylesheet.css
-:pdf-theme: themes/pdf-theme.yml
 :pdf-themesdir: themes/
+:pdf-theme: themes/pdf-theme.yml
+:pdf-fontsdir: themes/
 
 
 // Todo Header Styling und Environment ändern auf Doc. Header auf der Webseite muss auf andere Weise integriert werden
