--- a/README.adoc
+++ b/README.adoc
@@ -15,7 +15,7 @@ ifndef::env-github[:toc: left]
 :sectanchors:
 :includedir: docs
 :stylesheet: themes/stylesheet.css
-:pdf-themesdir: themes/
+//:pdf-themesdir: themes/
 :pdf-theme: themes/pdf-theme.yml
 :pdf-fontsdir: themes/
 
