--- a/README.adoc
+++ b/README.adoc
@@ -17,7 +17,7 @@ ifndef::env-github[:toc: left]
 :stylesheet: themes/stylesheet.css
 :pdf-theme: themes/pdf-theme.yml
 :pdf-themesdir: themes/
-:pdf-fontsdir: themes/
+//:pdf-fontsdir: themes/
 
 
 // Todo Header Styling und Environment ändern auf Doc. Header auf der Webseite muss auf andere Weise integriert werden
