--- a/README.adoc
+++ b/README.adoc
@@ -1,4 +1,5 @@
 ifndef::env-github[:toc: left]
+:doc-type: book
 :toc-title: Inhalt
 :toclevels: 5
 :figure-caption: Abbildung
@@ -15,6 +16,9 @@ ifndef::env-github[:toc: left]
 :includedir: docs
 :stylesheet: themes/stylesheet.css
 :pdf-theme: themes/pdf-theme.yml
+:pdf-themesdir: themes/
+//:pdf-fontsdir: themes/
+
 
 // Todo Header Styling und Environment ändern auf Doc. Header auf der Webseite muss auf andere Weise integriert werden
 ifdef::backend-pdf[]
