--- a/README.adoc
+++ b/README.adoc
@@ -7,7 +7,6 @@ ifndef::env-github[:toc: left]
 :table-caption: Tabelle
 :note-caption: Hinweis
 // zum Generieren eines PDF aus VS Code (HTML muss mit eingebetteten Bildern generiert werden, damit daraus ein korrektes PDF erstellt werden kann)
-:doctype: book
 :data-uri:
 :source-highlighter: highlight.js
 :sectnums:
@@ -24,12 +23,11 @@ ifdef::backend-pdf[]
 include::{includedir}/headerSZ.adoc[]
 endif::[]
 
+= Sondernutzungsplanung kommunal V1
 ifndef::env-github[]
 [.img-logo]
 image:{includedir}/img/logo_kt_sz_rgb.jpg[]
 endif::[]
-
-
 [.subtitle]#A202# +
 [.subtitle]#Modelldokumentation# +
 Amanda Wetter <amanda.wetter@sz.ch>
