--- a/README.adoc
+++ b/README.adoc
@@ -22,6 +22,11 @@ ifdef::backend-pdf[]
 include::{includedir}/headerSZ.adoc[]
 endif::[]
 
+ifndef::env-github[]
+[.img-logo]
+image:{includedir}/img/logo_kt_sz_rgb.jpg[]
+endif::[]
+
 = Sondernutzungsplanung kommunal V1
 Amanda Wetter <amanda.wetter@sz.ch>
 // Versionierung
@@ -29,14 +34,10 @@ Amanda Wetter <amanda.wetter@sz.ch>
 :revnumber: 0.1.3
 // Pdf output
 :title-page:
+:doctype: book
 
-[.subtitle]#A202# +
+[.subtitle]#A202# 
 [.subtitle]#Modelldokumentation# +
-
-ifndef::env-github[]
-[.img-logo]
-image:{includedir}/img/logo_kt_sz_rgb.jpg[]
-endif::[]
 
 // Die Verwiese auf die Inhalte der Dokumentation sollen im README auf Github nicht angezeigt werden.
 ifndef::env-github[]
