--- a/README.adoc
+++ b/README.adoc
@@ -1,3 +1,8 @@
+ifdef::env-github
+= Sondernutzungsplanung kommunal V1
+:doctype: book
+endif::[]
+
 ifndef::env-github[:toc: left]
 :toc-title: Inhalt
 :toclevels: 5
@@ -34,10 +39,8 @@ Amanda Wetter <amanda.wetter@sz.ch>
 :revnumber: 0.1.3
 // Pdf output
 :title-page:
-:doctype: book
-
 [.subtitle]#A202# 
-[.subtitle]#Modelldokumentation# +
+[.subtitle]#Modelldokumentation#
 
 // Die Verwiese auf die Inhalte der Dokumentation sollen im README auf Github nicht angezeigt werden.
 ifndef::env-github[]
