--- a/README.adoc
+++ b/README.adoc
@@ -1,7 +1,7 @@
-ifdef::env-github
+[showtitle!]
 = Sondernutzungsplanung kommunal V1
 :doctype: book
-endif::[]
+
 
 ifndef::env-github[:toc: left]
 :toc-title: Inhalt
@@ -34,13 +34,14 @@ endif::[]
 
 = Sondernutzungsplanung kommunal V1
 Amanda Wetter <amanda.wetter@sz.ch>
+[.subtitle]#A202# 
+[.subtitle]#Modelldokumentation#
 // Versionierung
 :revdate: {docdate}
 :revnumber: 0.1.3
 // Pdf output
 :title-page:
-[.subtitle]#A202# 
-[.subtitle]#Modelldokumentation#
+
 
 // Die Verwiese auf die Inhalte der Dokumentation sollen im README auf Github nicht angezeigt werden.
 ifndef::env-github[]
