--- a/README.adoc
+++ b/README.adoc
@@ -29,8 +29,9 @@ image:{includedir}/img/logo_kt_sz_rgb.jpg[]
 endif::[]
 
 = Sondernutzungsplanung kommunal V1
-[.subtitle]#A202# 
-[.subtitle]#Modelldokumentation +#
+[.subtitle]#A202 Modelldokumentation#
+[pass]
+<br>
 Amanda Wetter <amanda.wetter@sz.ch>
 // Versionierung
 :revdate: {docdate}
