--- a/README.adoc
+++ b/README.adoc
@@ -29,14 +29,10 @@ image:{includedir}/img/logo_kt_sz_rgb.jpg[]
 endif::[]
 
 = Sondernutzungsplanung kommunal V1
-[.subtitle]#A202 Modelldokumentation#
-[pass]
-<br>
+[.subtitle]#A202 Modelldokumentation# +
 Amanda Wetter <amanda.wetter@sz.ch>
-// Versionierung
 :revdate: {docdate}
 :revnumber: 0.1.3
-// Pdf output
 :title-page:
 
 
