--- a/docs/impressum.adoc
+++ b/docs/impressum.adoc
@@ -9,7 +9,7 @@ https://ch-sz-geo.github.io/A000/ebook.pdf[Hier gehts zum in einem anderen pdf-g
 [cols="1, 3"]
 |=======
 h|Erstelldatum h| 24.01.2024
-|Letzte Änderung | 24.01.2024
+|Letzte Änderung | {docdate}
 | Seitenzahl gesamt inkl. Deckblatt und Inhaltsverzeichnis | x
 | ID nach kGeoiV | --- 
 | Themen-Nummer | A202
