--- a/docs/impressum.adoc
+++ b/docs/impressum.adoc
@@ -19,23 +19,27 @@ Laura Lacher (LL), ARE
 |=======
 ====
 
-[discrete]
-==== Historie
+
+.Historie
+[%collapsible]
+====
 [cols="10%, 10%, 10%, 70%"]
 |=======
 h| Version h| Datum h| Autor h| Bemerkung
 | 1.0 | 23.08.2023 | kep | erster Entwurf und Veröffentlichung
 | 1.1 | 28.08.2023 | kep | Abschluss und Veröffentlichung
-| 1.2 | 01.03.2024 | aw | Digitalisierung
 |=======
+====
 
-[discrete]
-==== Koreferat
+.Koreferat
+[%collapsible]
+====
 [cols="10%, 10%, 10%, 70%"]
 |=======
 h| Version h| Datum h| Koreferent h| Prüfstelle
 | 1.0 | 23.08.2023 | LL | ARE
 |=======
+====
 
 [discrete]
 ==== Referenzierte Dokumente
