--- a/README.adoc
+++ b/README.adoc
@@ -18,7 +18,7 @@ ifndef::env-github[:toc: left]
 :pdf-fontsdir: fonts/
 :doctype: book
 
-// Todo Header Styling und Environment ändern auf Doc. Header auf der Webseite muss auf andere Weise integriert werden
+//Header auf der Webseite muss auf andere Weise integriert werden
 ifdef::backend-pdf[]
 include::{includedir}/headerSZ.adoc[]
 endif::[]
